# flir

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  triton_shared.cc
include/incubated/Conversion/: CMakeLists.txt
include/incubated/Conversion/AutoBlockify/: AutoBlockify.h  Passes.h  Utils.h
include/incubated/Conversion/AutoBlockifyIncubated/: AutoBlockify.h  Passes.h
include/incubated/Conversion/BubbleUpOperation/: BubbleUpOperation.h
include/incubated/Conversion/DiscreteMaskAccessConversion/: CMakeLists.txt
include/incubated/Conversion/DynamicCVPipeline/: AddControlFlowCondition.h  AddDynamicCVPipeline.h  Passes.h  SplitDataflowPass.h
include/incubated/Conversion/DynamicCVPipelineIncubated/: AddDynamicCVPipeline.h  Passes.h
include/incubated/Conversion/TritonAffinityOpt/: Passes.h
include/incubated/Conversion/TritonAffinityOptIncubated/: Passes.h
include/incubated/Conversion/TritonToAnnotation/: Passes.h
include/incubated/Conversion/TritonToGraph/: AliasAnalysis.h  ControlFlowGraph.h  ControlFlowGraphBuilder.h  DataflowGraph.h  GraphAnalysis.h  InterProceduralCFG.h  MemorySSA.h  MemorySsaBuilder.h  Passes.h
include/incubated/Conversion/TritonToGraphIncubated/: AliasAnalysis.h  ControlFlowGraph.h  ControlFlowGraphBuilder.h  DataflowGraph.h  GraphAnalysis.h  InterProceduralCFG.h  MemorySSA.h  MemorySsaBuilder.h  Passes.h
include/incubated/Conversion/TritonToLinalgIncubated/: ArgMinMaxConverter.h  CMakeLists.txt  ImplicitPermute.h  LoadStoreConverter.h  MarkTensorKindPass.h  MaskAnalysis.h  MathConverter.h  Passes.h  Passes.td  TritonOpConverter.h  TritonToLinalgIncubatedPass.h  UseAnalysis.h
include/incubated/Conversion/TritonToStructuredIncubated/: CMakeLists.txt  CannonicalizerConverter.h  MaskAnalysis.h  MemOpConverter.h  Passes.h  Passes.td  PtrAnalysis.h  TritonToStructuredIncubatedPass.h
include/incubated/Conversion/TritonToUnstructureIncubated/: BubbleUpOperation.h  CMakeLists.txt  Passes.td  UnstructureConversionPass.h
include/incubated/Conversion/UtilsIncubated/: CMakeLists.txt  InterleaveOptimization.h  Utils.h
lib/Conversion/: CMakeLists.txt
lib/Conversion/AutoBlockify/: AutoBlockify.cpp  RewriteOperation.cpp  Utils.cpp
lib/Conversion/AutoBlockifyIncubated/: AutoBlockify.cpp  RewriteOperation.cpp  Utils.cpp
lib/Conversion/BubbleUpOperation/: BubbleUpOperation.cpp
lib/Conversion/DiscreteMaskAccessConversion/: CMakeLists.txt  DiscreteMaskAccessConversionPass.cpp
lib/Conversion/DynamicCVPipeline/: AddControlFlowCondition.cpp  AddDynamicCVPipeline.cpp  AllocMultiCache.cpp  PlanComputeBlock.cpp  SeparateMemoryFromComputePass.cpp  SplitDataflow.cpp
lib/Conversion/DynamicCVPipeline/AddControlFlowCondition/: CloneOps.cpp  CreateIfOps.cpp  InitDependentMap.cpp  (+4 more)
lib/Conversion/MemrefCopyToDMA_FlagTree/: CMakeLists.txt  MemrefCopyToDMAFlagTree.cpp  MemrefCopyToDMAFlagTreePass.cpp
lib/Conversion/NoBufferize_FlagTree/: CMakeLists.txt  NoBufferizeFlagTree.cpp  NoBufferizeFlagTreePass.cpp
lib/Conversion/ReconcilePtrCasts/: CMakeLists.txt
lib/Conversion/StructuredToMemref/: CMakeLists.txt
lib/Conversion/TritonAffinityOpt/: DAG.cpp  DAGSSBuffer.cpp  DAGScope.cpp  DAGSync.cpp
lib/Conversion/TritonAffinityOptIncubated/: DAGScope.cpp
lib/Conversion/TritonArithToLinalg/: CMakeLists.txt
lib/Conversion/TritonPtrToMemref/: CMakeLists.txt
lib/Conversion/TritonToAnnotation/: TritonToAnnotation.cpp
lib/Conversion/TritonToGraph/: AliasAnalysis.cpp  ControlFlowGraph.cpp  ControlFlowGraphBuilder.cpp  DataflowGraph.cpp  GraphAnalysis.cpp  InterProceduralCFG.cpp  MemorySsaBuilder.cpp  Passes.cpp
lib/Conversion/TritonToGraphIncubated/: AliasAnalysis.cpp  ControlFlowGraph.cpp  ControlFlowGraphBuilder.cpp  DataflowGraph.cpp  GraphAnalysis.cpp  InterProceduralCFG.cpp  MemorySsaBuilder.cpp
lib/Conversion/TritonToHFusion/: TritonToHFusion.cpp
lib/Conversion/TritonToHIVM/: TritonToHIVM.cpp
lib/Conversion/TritonToLLVM/: TritonToLLVM.cpp
lib/Conversion/TritonToLinalgIncubated/: ArgMinMaxConverter.cpp  BlockPtrAnalysis.cpp  CMakeLists.txt  DescriptorConverter.cpp  HoistBroadcast.cpp  ImplicitPermute.cpp  LoadStoreConverter.cpp  MarkTensorKindPass.cpp  MaskAnalysis.cpp  MathConverter.cpp  TritonOpConverter.cpp  TritonToLinalgIncubatedPass.cpp  TritonToLinalgPass.cpp  UseAnalysis.cpp
lib/Conversion/TritonToStructured/: CMakeLists.txt  TritonToStructuredPass.cpp
lib/Conversion/TritonToStructuredIncubated/: CMakeLists.txt  CannonicalizerConverter.cpp  MaskAnalysis.cpp  MemOpConverter.cpp  PtrAnalysis.cpp  TritonToStructuredIncubatedPass.cpp
lib/Conversion/TritonToUnstructureIncubated/: BubbleUpOperation.cpp  CMakeLists.txt  OffsetAnalysis.cpp  ReplaceArguments.cpp  UnstructureConversionPass.cpp
lib/Conversion/TritonToUnstructured/: AtomicOpsConverter.cpp  CMakeLists.txt  TritonToUnstructuredPass.cpp
(+424 files in other folders)
