add_subdirectory(TritonToAnnotation)
add_subdirectory(TritonToLinalgIncubated)
add_subdirectory(DiscreteMaskAccessConversion)
add_subdirectory(TritonToUnstructureIncubated)
add_subdirectory(TritonToStructuredIncubated)
add_subdirectory(AutoBlockifyIncubated)
add_subdirectory(DynamicCVPipelineIncubated)
add_subdirectory(TritonAffinityOptIncubated)
add_subdirectory(TritonToGraphIncubated)
