add_subdirectory(TritonToAnnotation)
add_subdirectory(TritonToLinalgIncubated)
add_subdirectory(DiscreteMaskAccessConversion)
add_subdirectory(TritonToUnstructureIncubated)
add_subdirectory(TritonToStructuredIncubated)
add_subdirectory(AutoBlockify)
add_subdirectory(DynamicCVPipeline)
add_subdirectory(TritonAffinityOpt)
add_subdirectory(TritonToGraph)
